# wasm2arm32

./: .gitignore  .gitmodules  Cargo.toml  Makefile
.cargo/: config
data/: call.wat  empty.wat  i32add.wat  i32const.wat
script/: run-on-raspi.sh
src/: asm.rs  core.rs  main.rs  wast_json.rs
