[package]
name = "wasm2arm32"
version = "0.1.0"
authors = ["YAMAMOTO Yuji <whosekiteneverfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wasmer-runtime-core = { path = "./vendor/wasmer/lib/runtime-core" }
wasmparser = "0.51.3"
indexmap = "1.3.2"
serde = { version = "1" }
serde_derive = { version = "1" }
serde_json = "1"
